Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> listaInstrucciones
Rule 2     listaInstrucciones -> listaInstrucciones instruccion
Rule 3     listaInstrucciones -> instruccion
Rule 4     instruccion -> asignacion PUNTOCOMA
Rule 5     instruccion -> asignacionGlobal PUNTOCOMA
Rule 6     instruccion -> asignacionLocal PUNTOCOMA
Rule 7     instruccion -> llamadaFuncion PUNTOCOMA
Rule 8     instruccion -> struct
Rule 9     instruccion -> structMutable
Rule 10    instruccion -> declararFuncion
Rule 11    instruccion -> instruccionIf
Rule 12    instruccion -> instruccionWhile
Rule 13    instruccion -> instruccionFor
Rule 14    instruccion -> resBreak PUNTOCOMA
Rule 15    instruccion -> resContinue PUNTOCOMA
Rule 16    instruccion -> retorno PUNTOCOMA
Rule 17    asignacionGlobal -> resGlobal asignacion
Rule 18    asignacionLocal -> resLocal asignacion
Rule 19    structMutable -> resMutable struct
Rule 20    retorno -> resReturn expresion
Rule 21    asignacion -> IDENTIFICADOR IGUAL expresion DOBLEPUNTOS tipo
Rule 22    asignacion -> IDENTIFICADOR IGUAL expresion
Rule 23    asignacion -> IDENTIFICADOR accesoFS IGUAL expresion
Rule 24    asignacion -> IDENTIFICADOR dimension IGUAL expresion
Rule 25    asignacion -> IDENTIFICADOR DOBLEPUNTOS tipo
Rule 26    asignacion -> IDENTIFICADOR DOBLEPUNTOS tipo IGUAL expresion
Rule 27    asignacion -> IDENTIFICADOR
Rule 28    llamadaFuncion -> IDENTIFICADOR PARENTESISA listaExpresiones PARENTESISC
Rule 29    llamadaFuncion -> IDENTIFICADOR PARENTESISA PARENTESISC
Rule 30    llamadaFuncion -> resPush NOT PARENTESISA expresion COMA expresion PARENTESISC
Rule 31    llamadaFuncion -> resPrint PARENTESISA listaExpresiones PARENTESISC
Rule 32    llamadaFuncion -> resPrintln PARENTESISA listaExpresiones PARENTESISC
Rule 33    struct -> resStruct IDENTIFICADOR bloqueStruct resEnd PUNTOCOMA
Rule 34    declararFuncion -> resFuncion IDENTIFICADOR PARENTESISA listaParametros PARENTESISC listaInstrucciones resEnd PUNTOCOMA
Rule 35    declararFuncion -> resFuncion IDENTIFICADOR PARENTESISA PARENTESISC listaInstrucciones resEnd PUNTOCOMA
Rule 36    declararFuncion -> resFuncion IDENTIFICADOR PARENTESISA listaParametros PARENTESISC DOBLEPUNTOS tipo listaInstrucciones resEnd PUNTOCOMA
Rule 37    declararFuncion -> resFuncion IDENTIFICADOR PARENTESISA PARENTESISC DOBLEPUNTOS tipo listaInstrucciones resEnd PUNTOCOMA
Rule 38    instruccionIf -> resIf expresion listaInstrucciones resEnd PUNTOCOMA
Rule 39    instruccionIf -> resIf expresion listaInstrucciones resElse listaInstrucciones resEnd PUNTOCOMA
Rule 40    instruccionIf -> resIf expresion listaInstrucciones instruccionElseif resElse listaInstrucciones resEnd PUNTOCOMA
Rule 41    instruccionIf -> resIf expresion listaInstrucciones instruccionElseif resEnd PUNTOCOMA
Rule 42    instruccionElseif -> instruccionElseif resElseif expresion listaInstrucciones
Rule 43    instruccionElseif -> resElseif expresion listaInstrucciones
Rule 44    instruccionWhile -> resWhile expresion listaInstrucciones resEnd PUNTOCOMA
Rule 45    instruccionFor -> resFor IDENTIFICADOR resIn expresion listaInstrucciones resEnd PUNTOCOMA
Rule 46    expresion -> aritmetica
Rule 47    expresion -> relacionales
Rule 48    expresion -> logicas
Rule 49    expresion -> nativa
Rule 50    expresion -> resTrue
Rule 51    expresion -> resFalse
Rule 52    expresion -> IDENTIFICADOR
Rule 53    expresion -> ENTERO
Rule 54    expresion -> CADENA
Rule 55    expresion -> CARACTER
Rule 56    expresion -> FLOTANTE
Rule 57    expresion -> llamadaFuncion
Rule 58    expresion -> CORCHETEA listaExpresiones CORCHETEC
Rule 59    expresion -> IDENTIFICADOR accesoFS
Rule 60    expresion -> llamadaFuncion accesoFS
Rule 61    expresion -> PARENTESISA expresion PARENTESISC
Rule 62    expresion -> expresion DOSPUNTOS expresion
Rule 63    expresion -> IDENTIFICADOR dimension
Rule 64    expresion -> resNothing
Rule 65    tipo -> resInt64
Rule 66    tipo -> resFloat64
Rule 67    tipo -> resBool
Rule 68    tipo -> resChar
Rule 69    tipo -> resString
Rule 70    tipo -> IDENTIFICADOR
Rule 71    accesoFS -> accesoFS PUNTO IDENTIFICADOR
Rule 72    accesoFS -> PUNTO IDENTIFICADOR
Rule 73    listaParametros -> listaParametros COMA IDENTIFICADOR
Rule 74    listaParametros -> listaParametros COMA IDENTIFICADOR DOBLEPUNTOS tipo
Rule 75    listaParametros -> IDENTIFICADOR DOBLEPUNTOS tipo
Rule 76    listaParametros -> IDENTIFICADOR
Rule 77    bloqueStruct -> bloqueStruct declaracionAtributo PUNTOCOMA
Rule 78    bloqueStruct -> declaracionAtributo PUNTOCOMA
Rule 79    declaracionAtributo -> IDENTIFICADOR DOBLEPUNTOS tipo
Rule 80    declaracionAtributo -> IDENTIFICADOR
Rule 81    dimension -> dimension CORCHETEA expresion CORCHETEC
Rule 82    dimension -> CORCHETEA expresion CORCHETEC
Rule 83    listaAsignaciones -> listaAsignaciones COMA asignacion
Rule 84    listaAsignaciones -> asignacion
Rule 85    aritmetica -> expresion SUMA expresion
Rule 86    aritmetica -> expresion RESTA expresion
Rule 87    aritmetica -> expresion MULTIPLICACION expresion
Rule 88    aritmetica -> expresion DIVISION expresion
Rule 89    aritmetica -> expresion POTENCIA expresion
Rule 90    aritmetica -> expresion MODULO expresion
Rule 91    aritmetica -> RESTA expresion
Rule 92    nativa -> resLog10 PARENTESISA expresion PARENTESISC
Rule 93    nativa -> resLog PARENTESISA expresion COMA expresion PARENTESISC
Rule 94    nativa -> resSin PARENTESISA expresion PARENTESISC
Rule 95    nativa -> resCos PARENTESISA expresion PARENTESISC
Rule 96    nativa -> resTan PARENTESISA expresion PARENTESISC
Rule 97    nativa -> resSqrt PARENTESISA expresion PARENTESISC
Rule 98    nativa -> resParse PARENTESISA resInt64 COMA expresion PARENTESISC
Rule 99    nativa -> resParse PARENTESISA resFloat64 COMA expresion PARENTESISC
Rule 100   nativa -> resTrunc PARENTESISA expresion PARENTESISC
Rule 101   nativa -> resFloat PARENTESISA expresion PARENTESISC
Rule 102   nativa -> resStringFunc PARENTESISA expresion PARENTESISC
Rule 103   nativa -> resTypeof PARENTESISA expresion PARENTESISC
Rule 104   nativa -> resPop NOT PARENTESISA expresion PARENTESISC
Rule 105   nativa -> resLength PARENTESISA expresion PARENTESISC
Rule 106   nativa -> resUppercase PARENTESISA expresion PARENTESISC
Rule 107   nativa -> resLowercase PARENTESISA expresion PARENTESISC
Rule 108   relacionales -> expresion IGUALIGUAL expresion
Rule 109   relacionales -> expresion DIFERENTE expresion
Rule 110   relacionales -> expresion MAYOR expresion
Rule 111   relacionales -> expresion MENOR expresion
Rule 112   relacionales -> expresion MAYORIGUAL expresion
Rule 113   relacionales -> expresion MENORIGUAL expresion
Rule 114   logicas -> expresion OR expresion
Rule 115   logicas -> expresion AND expresion
Rule 116   logicas -> NOT expresion
Rule 117   listaExpresiones -> listaExpresiones COMA expresion
Rule 118   listaExpresiones -> expresion

Terminals, with rules where they appear

AND                  : 115
CADENA               : 54
CARACTER             : 55
COMA                 : 30 73 74 83 93 98 99 117
CORCHETEA            : 58 81 82
CORCHETEC            : 58 81 82
DIFERENTE            : 109
DIVISION             : 88
DOBLEPUNTOS          : 21 25 26 36 37 74 75 79
DOSPUNTOS            : 62
ENTERO               : 53
FLOTANTE             : 56
IDENTIFICADOR        : 21 22 23 24 25 26 27 28 29 33 34 35 36 37 45 52 59 63 70 71 72 73 74 75 76 79 80
IGUAL                : 21 22 23 24 26
IGUALIGUAL           : 108
MAYOR                : 110
MAYORIGUAL           : 112
MENOR                : 111
MENORIGUAL           : 113
MODULO               : 90
MULTIPLICACION       : 87
NOT                  : 30 104 116
OR                   : 114
PARENTESISA          : 28 29 30 31 32 34 35 36 37 61 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
PARENTESISC          : 28 29 30 31 32 34 35 36 37 61 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
POTENCIA             : 89
PUNTO                : 71 72
PUNTOCOMA            : 4 5 6 7 14 15 16 33 34 35 36 37 38 39 40 41 44 45 77 78
RESTA                : 86 91
SUMA                 : 85
error                : 
resBool              : 67
resBreak             : 14
resChar              : 68
resContinue          : 15
resCos               : 95
resElse              : 39 40
resElseif            : 42 43
resEnd               : 33 34 35 36 37 38 39 40 41 44 45
resFalse             : 51
resFloat             : 101
resFloat64           : 66 99
resFor               : 45
resFuncion           : 34 35 36 37
resGlobal            : 17
resIf                : 38 39 40 41
resIn                : 45
resInt64             : 65 98
resLength            : 105
resLocal             : 18
resLog               : 93
resLog10             : 92
resLowercase         : 107
resMutable           : 19
resNothing           : 64
resParse             : 98 99
resPop               : 104
resPrint             : 31
resPrintln           : 32
resPush              : 30
resReturn            : 20
resSin               : 94
resSqrt              : 97
resString            : 69
resStringFunc        : 102
resStruct            : 33
resTan               : 96
resTrue              : 50
resTrunc             : 100
resTypeof            : 103
resUppercase         : 106
resWhile             : 44

Nonterminals, with rules where they appear

accesoFS             : 23 59 60 71
aritmetica           : 46
asignacion           : 4 17 18 83 84
asignacionGlobal     : 5
asignacionLocal      : 6
bloqueStruct         : 33 77
declaracionAtributo  : 77 78
declararFuncion      : 10
dimension            : 24 63 81
expresion            : 20 21 22 23 24 26 30 30 38 39 40 41 42 43 44 45 61 62 62 81 82 85 85 86 86 87 87 88 88 89 89 90 90 91 92 93 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 117 118
init                 : 0
instruccion          : 2 3
instruccionElseif    : 40 41 42
instruccionFor       : 13
instruccionIf        : 11
instruccionWhile     : 12
listaAsignaciones    : 83
listaExpresiones     : 28 31 32 58 117
listaInstrucciones   : 1 2 34 35 36 37 38 39 39 40 40 41 42 43 44 45
listaParametros      : 34 36 73 74
llamadaFuncion       : 7 57 60
logicas              : 48
nativa               : 49
relacionales         : 47
retorno              : 16
struct               : 8 19
structMutable        : 9
tipo                 : 21 25 26 36 37 74 75 79

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . listaInstrucciones
    (2) listaInstrucciones -> . listaInstrucciones instruccion
    (3) listaInstrucciones -> . instruccion
    (4) instruccion -> . asignacion PUNTOCOMA
    (5) instruccion -> . asignacionGlobal PUNTOCOMA
    (6) instruccion -> . asignacionLocal PUNTOCOMA
    (7) instruccion -> . llamadaFuncion PUNTOCOMA
    (8) instruccion -> . struct
    (9) instruccion -> . structMutable
    (10) instruccion -> . declararFuncion
    (11) instruccion -> . instruccionIf
    (12) instruccion -> . instruccionWhile
    (13) instruccion -> . instruccionFor
    (14) instruccion -> . resBreak PUNTOCOMA
    (15) instruccion -> . resContinue PUNTOCOMA
    (16) instruccion -> . retorno PUNTOCOMA
    (21) asignacion -> . IDENTIFICADOR IGUAL expresion DOBLEPUNTOS tipo
    (22) asignacion -> . IDENTIFICADOR IGUAL expresion
    (23) asignacion -> . IDENTIFICADOR accesoFS IGUAL expresion
    (24) asignacion -> . IDENTIFICADOR dimension IGUAL expresion
    (25) asignacion -> . IDENTIFICADOR DOBLEPUNTOS tipo
    (26) asignacion -> . IDENTIFICADOR DOBLEPUNTOS tipo IGUAL expresion
    (27) asignacion -> . IDENTIFICADOR
    (17) asignacionGlobal -> . resGlobal asignacion
    (18) asignacionLocal -> . resLocal asignacion
    (28) llamadaFuncion -> . IDENTIFICADOR PARENTESISA listaExpresiones PARENTESISC
    (29) llamadaFuncion -> . IDENTIFICADOR PARENTESISA PARENTESISC
    (30) llamadaFuncion -> . resPush NOT PARENTESISA expresion COMA expresion PARENTESISC
    (31) llamadaFuncion -> . resPrint PARENTESISA listaExpresiones PARENTESISC
    (32) llamadaFuncion -> . resPrintln PARENTESISA listaExpresiones PARENTESISC
    (33) struct -> . resStruct IDENTIFICADOR bloqueStruct resEnd PUNTOCOMA
    (19) structMutable -> . resMutable struct
    (34) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA listaParametros PARENTESISC listaInstrucciones resEnd PUNTOCOMA
    (35) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA PARENTESISC listaInstrucciones resEnd PUNTOCOMA
    (36) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA listaParametros PARENTESISC DOBLEPUNTOS tipo listaInstrucciones resEnd PUNTOCOMA
    (37) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA PARENTESISC DOBLEPUNTOS tipo listaInstrucciones resEnd PUNTOCOMA
    (38) instruccionIf -> . resIf expresion listaInstrucciones resEnd PUNTOCOMA
    (39) instruccionIf -> . resIf expresion listaInstrucciones resElse listaInstrucciones resEnd PUNTOCOMA
    (40) instruccionIf -> . resIf expresion listaInstrucciones instruccionElseif resElse listaInstrucciones resEnd PUNTOCOMA
    (41) instruccionIf -> . resIf expresion listaInstrucciones instruccionElseif resEnd PUNTOCOMA
    (44) instruccionWhile -> . resWhile expresion listaInstrucciones resEnd PUNTOCOMA
    (45) instruccionFor -> . resFor IDENTIFICADOR resIn expresion listaInstrucciones resEnd PUNTOCOMA
    (20) retorno -> . resReturn expresion

    resBreak        shift and go to state 14
    resContinue     shift and go to state 15
    IDENTIFICADOR   shift and go to state 17
    resGlobal       shift and go to state 18
    resLocal        shift and go to state 19
    resPush         shift and go to state 20
    resPrint        shift and go to state 21
    resPrintln      shift and go to state 22
    resStruct       shift and go to state 23
    resMutable      shift and go to state 24
    resFuncion      shift and go to state 25
    resIf           shift and go to state 26
    resWhile        shift and go to state 27
    resFor          shift and go to state 28
    resReturn       shift and go to state 29

    init                           shift and go to state 1
    listaInstrucciones             shift and go to state 2
    instruccion                    shift and go to state 3
    asignacion                     shift and go to state 4
    asignacionGlobal               shift and go to state 5
    asignacionLocal                shift and go to state 6
    llamadaFuncion                 shift and go to state 7
    struct                         shift and go to state 8
    structMutable                  shift and go to state 9
    declararFuncion                shift and go to state 10
    instruccionIf                  shift and go to state 11
    instruccionWhile               shift and go to state 12
    instruccionFor                 shift and go to state 13
    retorno                        shift and go to state 16

state 1

    (0) S' -> init .



state 2

    (1) init -> listaInstrucciones .
    (2) listaInstrucciones -> listaInstrucciones . instruccion
    (4) instruccion -> . asignacion PUNTOCOMA
    (5) instruccion -> . asignacionGlobal PUNTOCOMA
    (6) instruccion -> . asignacionLocal PUNTOCOMA
    (7) instruccion -> . llamadaFuncion PUNTOCOMA
    (8) instruccion -> . struct
    (9) instruccion -> . structMutable
    (10) instruccion -> . declararFuncion
    (11) instruccion -> . instruccionIf
    (12) instruccion -> . instruccionWhile
    (13) instruccion -> . instruccionFor
    (14) instruccion -> . resBreak PUNTOCOMA
    (15) instruccion -> . resContinue PUNTOCOMA
    (16) instruccion -> . retorno PUNTOCOMA
    (21) asignacion -> . IDENTIFICADOR IGUAL expresion DOBLEPUNTOS tipo
    (22) asignacion -> . IDENTIFICADOR IGUAL expresion
    (23) asignacion -> . IDENTIFICADOR accesoFS IGUAL expresion
    (24) asignacion -> . IDENTIFICADOR dimension IGUAL expresion
    (25) asignacion -> . IDENTIFICADOR DOBLEPUNTOS tipo
    (26) asignacion -> . IDENTIFICADOR DOBLEPUNTOS tipo IGUAL expresion
    (27) asignacion -> . IDENTIFICADOR
    (17) asignacionGlobal -> . resGlobal asignacion
    (18) asignacionLocal -> . resLocal asignacion
    (28) llamadaFuncion -> . IDENTIFICADOR PARENTESISA listaExpresiones PARENTESISC
    (29) llamadaFuncion -> . IDENTIFICADOR PARENTESISA PARENTESISC
    (30) llamadaFuncion -> . resPush NOT PARENTESISA expresion COMA expresion PARENTESISC
    (31) llamadaFuncion -> . resPrint PARENTESISA listaExpresiones PARENTESISC
    (32) llamadaFuncion -> . resPrintln PARENTESISA listaExpresiones PARENTESISC
    (33) struct -> . resStruct IDENTIFICADOR bloqueStruct resEnd PUNTOCOMA
    (19) structMutable -> . resMutable struct
    (34) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA listaParametros PARENTESISC listaInstrucciones resEnd PUNTOCOMA
    (35) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA PARENTESISC listaInstrucciones resEnd PUNTOCOMA
    (36) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA listaParametros PARENTESISC DOBLEPUNTOS tipo listaInstrucciones resEnd PUNTOCOMA
    (37) declararFuncion -> . resFuncion IDENTIFICADOR PARENTESISA PARENTESISC DOBLEPUNTOS tipo listaInstrucciones resEnd PUNTOCOMA
    (38) instruccionIf -> . resIf expresion listaInstrucciones resEnd PUNTOCOMA
    (39) instruccionIf -> . resIf expresion listaInstrucciones resElse listaInstrucciones resEnd PUNTOCOMA
    (40) instruccionIf -> . resIf expresion listaInstrucciones instruccionElseif resElse listaInstrucciones resEnd PUNTOCOMA
    (41) instruccionIf -> . resIf expresion listaInstrucciones instruccionElseif resEnd PUNTOCOMA
    (44) instruccionWhile -> . resWhile expresion listaInstrucciones resEnd PUNTOCOMA
    (45) instruccionFor -> . resFor IDENTIFICADOR resIn expresion listaInstrucciones resEnd PUNTOCOMA
    (20) retorno -> . resReturn expresion

    $end            reduce using rule 1 (init -> listaInstrucciones .)
    resBreak        shift and go to state 14
    resContinue     shift and go to state 15
    IDENTIFICADOR   shift and go to state 17
    resGlobal       shift and go to state 18
    resLocal        shift and go to state 19
    resPush         shift and go to state 20
    resPrint        shift and go to state 21
    resPrintln      shift and go to state 22
    resStruct       shift and go to state 23
    resMutable      shift and go to state 24
    resFuncion      shift and go to state 25
    resIf           shift and go to state 26
    resWhile        shift and go to state 27
    resFor          shift and go to state 28
    resReturn       shift and go to state 29

    instruccion                    shift and go to state 30
    asignacion                     shift and go to state 4
    asignacionGlobal               shift and go to state 5
    asignacionLocal                shift and go to state 6
    llamadaFuncion                 shift and go to state 7
    struct                         shift and go to state 8
    structMutable                  shift and go to state 9
    declararFuncion                shift and go to state 10
    instruccionIf                  shift and go to state 11
    instruccionWhile               shift and go to state 12
    instruccionFor                 shift and go to state 13
    retorno                        shift and go to state 16

state 3

    (3) listaInstrucciones -> instruccion .

    resBreak        reduce using rule 3 (listaInstrucciones -> instruccion .)
    resContinue     reduce using rule 3 (listaInstrucciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 3 (listaInstrucciones -> instruccion .)
    resGlobal       reduce using rule 3 (listaInstrucciones -> instruccion .)
    resLocal        reduce using rule 3 (listaInstrucciones -> instruccion .)
    resPush         reduce using rule 3 (listaInstrucciones -> instruccion .)
    resPrint        reduce using rule 3 (listaInstrucciones -> instruccion .)
    resPrintln      reduce using rule 3 (listaInstrucciones -> instruccion .)
    resStruct       reduce using rule 3 (listaInstrucciones -> instruccion .)
    resMutable      reduce using rule 3 (listaInstrucciones -> instruccion .)
    resFuncion      reduce using rule 3 (listaInstrucciones -> instruccion .)
    resIf           reduce using rule 3 (listaInstrucciones -> instruccion .)
    resWhile        reduce using rule 3 (listaInstrucciones -> instruccion .)
    resFor          reduce using rule 3 (listaInstrucciones -> instruccion .)
    resReturn       reduce using rule 3 (listaInstrucciones -> instruccion .)
    $end            reduce using rule 3 (listaInstrucciones -> instruccion .)
    resEnd          reduce using rule 3 (listaInstrucciones -> instruccion .)
    resElse         reduce using rule 3 (listaInstrucciones -> instruccion .)
    resElseif       reduce using rule 3 (listaInstrucciones -> instruccion .)


state 4

    (4) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 31


state 5

    (5) instruccion -> asignacionGlobal . PUNTOCOMA

    PUNTOCOMA       shift and go to state 32


state 6

    (6) instruccion -> asignacionLocal . PUNTOCOMA

    PUNTOCOMA       shift and go to state 33


state 7

    (7) instruccion -> llamadaFuncion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34


state 8

    (8) instruccion -> struct .

    resBreak        reduce using rule 8 (instruccion -> struct .)
    resContinue     reduce using rule 8 (instruccion -> struct .)
    IDENTIFICADOR   reduce using rule 8 (instruccion -> struct .)
    resGlobal       reduce using rule 8 (instruccion -> struct .)
    resLocal        reduce using rule 8 (instruccion -> struct .)
    resPush         reduce using rule 8 (instruccion -> struct .)
    resPrint        reduce using rule 8 (instruccion -> struct .)
    resPrintln      reduce using rule 8 (instruccion -> struct .)
    resStruct       reduce using rule 8 (instruccion -> struct .)
    resMutable      reduce using rule 8 (instruccion -> struct .)
    resFuncion      reduce using rule 8 (instruccion -> struct .)
    resIf           reduce using rule 8 (instruccion -> struct .)
    resWhile        reduce using rule 8 (instruccion -> struct .)
    resFor          reduce using rule 8 (instruccion -> struct .)
    resReturn       reduce using rule 8 (instruccion -> struct .)
    $end            reduce using rule 8 (instruccion -> struct .)
    resEnd          reduce using rule 8 (instruccion -> struct .)
    resElse         reduce using rule 8 (instruccion -> struct .)
    resElseif       reduce using rule 8 (instruccion -> struct .)


state 9

    (9) instruccion -> structMutable .

    resBreak        reduce using rule 9 (instruccion -> structMutable .)
    resContinue     reduce using rule 9 (instruccion -> structMutable .)
    IDENTIFICADOR   reduce using rule 9 (instruccion -> structMutable .)
    resGlobal       reduce using rule 9 (instruccion -> structMutable .)
    resLocal        reduce using rule 9 (instruccion -> structMutable .)
    resPush         reduce using rule 9 (instruccion -> structMutable .)
    resPrint        reduce using rule 9 (instruccion -> structMutable .)
    resPrintln      reduce using rule 9 (instruccion -> structMutable .)
    resStruct       reduce using rule 9 (instruccion -> structMutable .)
    resMutable      reduce using rule 9 (instruccion -> structMutable .)
    resFuncion      reduce using rule 9 (instruccion -> structMutable .)
    resIf           reduce using rule 9 (instruccion -> structMutable .)
    resWhile        reduce using rule 9 (instruccion -> structMutable .)
    resFor          reduce using rule 9 (instruccion -> structMutable .)
    resReturn       reduce using rule 9 (instruccion -> structMutable .)
    $end            reduce using rule 9 (instruccion -> structMutable .)
    resEnd          reduce using rule 9 (instruccion -> structMutable .)
    resElse         reduce using rule 9 (instruccion -> structMutable .)
    resElseif       reduce using rule 9 (instruccion -> structMutable .)


state 10

    (10) instruccion -> declararFuncion .

    resBreak        reduce using rule 10 (instruccion -> declararFuncion .)
    resContinue     reduce using rule 10 (instruccion -> declararFuncion .)
    IDENTIFICADOR   reduce using rule 10 (instruccion -> declararFuncion .)
    resGlobal       reduce using rule 10 (instruccion -> declararFuncion .)
    resLocal        reduce using rule 10 (instruccion -> declararFuncion .)
    resPush         reduce using rule 10 (instruccion -> declararFuncion .)
    resPrint        reduce using rule 10 (instruccion -> declararFuncion .)
    resPrintln      reduce using rule 10 (instruccion -> declararFuncion .)
    resStruct       reduce using rule 10 (instruccion -> declararFuncion .)
    resMutable      reduce using rule 10 (instruccion -> declararFuncion .)
    resFuncion      reduce using rule 10 (instruccion -> declararFuncion .)
    resIf           reduce using rule 10 (instruccion -> declararFuncion .)
    resWhile        reduce using rule 10 (instruccion -> declararFuncion .)
    resFor          reduce using rule 10 (instruccion -> declararFuncion .)
    resReturn       reduce using rule 10 (instruccion -> declararFuncion .)
    $end            reduce using rule 10 (instruccion -> declararFuncion .)
    resEnd          reduce using rule 10 (instruccion -> declararFuncion .)
    resElse         reduce using rule 10 (instruccion -> declararFuncion .)
    resElseif       reduce using rule 10 (instruccion -> declararFuncion .)


state 11

    (11) instruccion -> instruccionIf .

    resBreak        reduce using rule 11 (instruccion -> instruccionIf .)
    resContinue     reduce using rule 11 (instruccion -> instruccionIf .)
    IDENTIFICADOR   reduce using rule 11 (instruccion -> instruccionIf .)
    resGlobal       reduce using rule 11 (instruccion -> instruccionIf .)
    resLocal        reduce using rule 11 (instruccion -> instruccionIf .)
    resPush         reduce using rule 11 (instruccion -> instruccionIf .)
    resPrint        reduce using rule 11 (instruccion -> instruccionIf .)
    resPrintln      reduce using rule 11 (instruccion -> instruccionIf .)
    resStruct       reduce using rule 11 (instruccion -> instruccionIf .)
    resMutable      reduce using rule 11 (instruccion -> instruccionIf .)
    resFuncion      reduce using rule 11 (instruccion -> instruccionIf .)
    resIf           reduce using rule 11 (instruccion -> instruccionIf .)
    resWhile        reduce using rule 11 (instruccion -> instruccionIf .)
    resFor          reduce using rule 11 (instruccion -> instruccionIf .)
    resReturn       reduce using rule 11 (instruccion -> instruccionIf .)
    $end            reduce using rule 11 (instruccion -> instruccionIf .)
    resEnd          reduce using rule 11 (instruccion -> instruccionIf .)
    resElse         reduce using rule 11 (instruccion -> instruccionIf .)
    resElseif       reduce using rule 11 (instruccion -> instruccionIf .)


state 12

    (12) instruccion -> instruccionWhile .

    resBreak        reduce using rule 12 (instruccion -> instruccionWhile .)
    resContinue     reduce using rule 12 (instruccion -> instruccionWhile .)
    IDENTIFICADOR   reduce using rule 12 (instruccion -> instruccionWhile .)
    resGlobal       reduce using rule 12 (instruccion -> instruccionWhile .)
    resLocal        reduce using rule 12 (instruccion -> instruccionWhile .)
    resPush         reduce using rule 12 (instruccion -> instruccionWhile .)
    resPrint        reduce using rule 12 (instruccion -> instruccionWhile .)
    resPrintln      reduce using rule 12 (instruccion -> instruccionWhile .)
    resStruct       reduce using rule 12 (instruccion -> instruccionWhile .)
    resMutable      reduce using rule 12 (instruccion -> instruccionWhile .)
    resFuncion      reduce using rule 12 (instruccion -> instruccionWhile .)
    resIf           reduce using rule 12 (instruccion -> instruccionWhile .)
    resWhile        reduce using rule 12 (instruccion -> instruccionWhile .)
    resFor          reduce using rule 12 (instruccion -> instruccionWhile .)
    resReturn       reduce using rule 12 (instruccion -> instruccionWhile .)
    $end            reduce using rule 12 (instruccion -> instruccionWhile .)
    resEnd          reduce using rule 12 (instruccion -> instruccionWhile .)
    resElse         reduce using rule 12 (instruccion -> instruccionWhile .)
    resElseif       reduce using rule 12 (instruccion -> instruccionWhile .)


state 13

    (13) instruccion -> instruccionFor .

    resBreak        reduce using rule 13 (instruccion -> instruccionFor .)
    resContinue     reduce using rule 13 (instruccion -> instruccionFor .)
    IDENTIFICADOR   reduce using rule 13 (instruccion -> instruccionFor .)
    resGlobal       reduce using rule 13 (instruccion -> instruccionFor .)
    resLocal        reduce using rule 13 (instruccion -> instruccionFor .)
    resPush         reduce using rule 13 (instruccion -> instruccionFor .)
    resPrint        reduce using rule 13 (instruccion -> instruccionFor .)
    resPrintln      reduce using rule 13 (instruccion -> instruccionFor .)
    resStruct       reduce using rule 13 (instruccion -> instruccionFor .)
    resMutable      reduce using rule 13 (instruccion -> instruccionFor .)
    resFuncion      reduce using rule 13 (instruccion -> instruccionFor .)
    resIf           reduce using rule 13 (instruccion -> instruccionFor .)
    resWhile        reduce using rule 13 (instruccion -> instruccionFor .)
    resFor          reduce using rule 13 (instruccion -> instruccionFor .)
    resReturn       reduce using rule 13 (instruccion -> instruccionFor .)
    $end            reduce using rule 13 (instruccion -> instruccionFor .)
    resEnd          reduce using rule 13 (instruccion -> instruccionFor .)
    resElse         reduce using rule 13 (instruccion -> instruccionFor .)
    resElseif       reduce using rule 13 (instruccion -> instruccionFor .)


state 14

    (14) instruccion -> resBreak . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35


state 15

    (15) instruccion -> resContinue . PUNTOCOMA

    PUNTOCOMA       shift and go to state 36


state 16

    (16) instruccion -> retorno . PUNTOCOMA

    PUNTOCOMA       shift and go to state 37


state 17

    (21) asignacion -> IDENTIFICADOR . IGUAL expresion DOBLEPUNTOS tipo
    (22) asignacion -> IDENTIFICADOR . IGUAL expresion
    (23) asignacion -> IDENTIFICADOR . accesoFS IGUAL expresion
    (24) asignacion -> IDENTIFICADOR . dimension IGUAL expresion
    (25) asignacion -> IDENTIFICADOR . DOBLEPUNTOS tipo
    (26) asignacion -> IDENTIFICADOR . DOBLEPUNTOS tipo IGUAL expresion
    (27) asignacion -> IDENTIFICADOR .
    (28) llamadaFuncion -> IDENTIFICADOR . PARENTESISA listaExpresiones PARENTESISC
    (29) llamadaFuncion -> IDENTIFICADOR . PARENTESISA PARENTESISC
    (71) accesoFS -> . accesoFS PUNTO IDENTIFICADOR
    (72) accesoFS -> . PUNTO IDENTIFICADOR
    (81) dimension -> . dimension CORCHETEA expresion CORCHETEC
    (82) dimension -> . CORCHETEA expresion CORCHETEC

    IGUAL           shift and go to state 38
    DOBLEPUNTOS     shift and go to state 39
    PUNTOCOMA       reduce using rule 27 (asignacion -> IDENTIFICADOR .)
    PARENTESISA     shift and go to state 42
    PUNTO           shift and go to state 43
    CORCHETEA       shift and go to state 44

    accesoFS                       shift and go to state 40
    dimension                      shift and go to state 41

state 18

    (17) asignacionGlobal -> resGlobal . asignacion
    (21) asignacion -> . IDENTIFICADOR IGUAL expresion DOBLEPUNTOS tipo
    (22) asignacion -> . IDENTIFICADOR IGUAL expresion
    (23) asignacion -> . IDENTIFICADOR accesoFS IGUAL expresion
    (24) asignacion -> . IDENTIFICADOR dimension IGUAL expresion
    (25) asignacion -> . IDENTIFICADOR DOBLEPUNTOS tipo
    (26) asignacion -> . IDENTIFICADOR DOBLEPUNTOS tipo IGUAL expresion
    (27) asignacion -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 46

    asignacion                     shift and go to state 45

state 19
